# ai-trends

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
backend/: .env.example
docs/: DATA_SOURCE_ONBOARDING.md  HANDOFF_AGENT_FEISHU.md  agent-trend-platform-prd-tech-spec.md  deploy-tencent-cvm.md  implementation-architecture-api-db-security-v1.md  monetization-intent-audit.md  requirements-master-v1.md  review-log-p0-closure.md  tencent-deploy-info-template.md
frontend/: .env.example  .env.mock  index.html  package-lock.json  package.json  playwright.config.ts  playwright.resource-mock.config.ts  tailwind.config.js  vite.config.ts
local/: README.md  credentials.example  newsapi.credentials.example  product_hunt.credentials.example  thenewsapi.credentials.example
scripts/: _analyze_sync_run_remote.py  _audit_all_sources_fetch_remote.py  _cleanup_logs_and_usa_digest_remote.py  _count_apps_feed_remote.py  _count_articles_today_remote.py  _diag_ingest_today_remote.py  _remote_digest_body.py  _run_audit_all_sources_remote.py  apply_nginx_cloud.py  audit_connector_sources.py  audit_substantive_articles.py  backfill_github_snapshot_article_ids.py  bootstrap_github_snapshots_remote.py  bootstrap_linux_vm.sh  debug_github_industry_mismatch.py  debug_github_snapshot_lookup.py  debug_github_snapshots_all.py  deploy_ssh.py  diagnose_connector_sync_llm.py  diagnose_newsletter_feishu_remote.py  diagnose_published_by_source.py  docker-local-up.bat  docker-local-up.sh  export_github_ai_sample.py  github_trending_discover.py  ssh_aisoul.sh  (+29 more)
(+234 files in other folders)
